# Classify-files-agent

./: .gitignore  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml  run.py
src/create_agent/: __init__.py  main.py
src/create_agent/agent/: conversation.py  core.py  prompts.py
src/create_agent/cli/: __init__.py  commands.py  display.py
src/create_agent/config/: loader.py  models.py
src/create_agent/extraction/: __init__.py  dispatcher.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py
src/create_agent/tools/: base.py  classifier.py  document_qa.py  file_organizer.py  file_scanner.py  registry.py  text_extractor.py  web_search.py
tests/: conftest.py
tests/test_agent/: test_core.py
tests/test_tools/: test_tools.py
