[project]
name = "create-agent"
version = "0.1.0"
description = "Intelligent document processing agent — classify, search, and Q&A over documents"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pdfplumber>=0.10.0",
    "pyyaml>=6.0",
    "tavily-python>=0.5.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
create-agent = "create_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
